third_party/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingArea.h
@@ -62,6 +62,7 @@ public:
     // FIXME: These should be pure virtual.
     virtual void pageBackgroundTransparencyChanged() { }
     virtual void forceRepaint() { }
+    virtual void setLayerTreeStateIsFrozen(bool) { }
 
     virtual void didInstallPageOverlay() { }
     virtual void didUninstallPageOverlay() { }
