third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/LayerTreeHostCA.cpp
@@ -43,6 +43,7 @@ namespace WebKit {
 
 LayerTreeHostCA::LayerTreeHostCA(WebPage* webPage)
     : LayerTreeHost(webPage)
+    , m_layerFlushSchedulingEnabled(true)
     , m_isValid(true)
     , m_notifyAfterScheduledLayerFlush(false)
 {
