third_party/WebKit/Source/WebKit2/WebProcess/WebPage/ca/LayerTreeHostCA.h
@@ -55,6 +55,8 @@ protected:
     // LayerTreeHostCA
     virtual void didPerformScheduledLayerFlush();
 
+    bool m_layerFlushSchedulingEnabled;
+
 private:
     // LayerTreeHost.
     virtual const LayerTreeContext& layerTreeContext();
